--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-TO RUN LOCALLY
+TO RUN LOCALLY:
+
 /home/sluu/projects/google_appengine/dev_appserver.py .
 /home/sluu/projects/google_appengine/appcfg.py update .
